linkfix, replaced: [[Wikipedie:Nedersaksies beluusteren]] → [[Wikipedia:Nedersaksies beluusteren]] using [[Project:AWB|AWB]]

--- a/Nedersaksisch.mw
+++ b/Nedersaksisch.mw
@@ -11,7 +11,7 @@ Et begrip ''Nedersaksies'' wördden tot in de [[1990-1999|jaoren negentig]] van 
 
 Onder invleud van verschillende streektaalbewegingen hef in Nederlaand de [[politiek]] et begrip ''Nedersaksies'' overeneumen en uuteindelik as streektaal erkend. Van één gelieke kultuurtaal is gien sprake, oek deurdat elke poging van standardisering (woordeschat en spelling) as een vremd iets ezien wördt en wördt daorumme meestentieds oek al gauw aofewezen.
 
-De taal wördt soms oek wel kortweg ''Saksies'' eneumd, een benaming die van oudsheer oek al veurkwam. 
+De taal wördt soms oek wel kortweg ''Saksies'' eneumd, een benaming die van oudsheer oek al veurkwam.
 
 ==Geografies gebied==
 ===In Europa===
@@ -30,21 +30,21 @@ Et Nedersaksies is nauw verwant an et [[Fries]], mer oek an et [[Engels]], dat k
 
 Van de [[16e eeuw|16e]] tot de [[20e eeuw]] was et Nedersaksies, wat toe nog gewoon ''plat'' heetten, niet meer de taal van de haandelsluui mer steeds meer van de eenvoudige luui. Op schoele en in de karke wördden et Nederlaands of et Hoogduuts de voertaal. Vanaof de 20e eeuw is et Nederlaands of et Hoogduuts oek bie de eenvoudige luui der meer en meer in-ekeumen. De standardtalen kregen vanaof die tied meer anzien as et plat, dat lag onder aandere an et feit dat meensen steeds vakerder kontakten hadden buten der eigen darp of stad. Veur die tied hadden meensen niet zo vake kontakten buten der eigen darp of stad of in elk geval niet mit meensen die veerder weg woenden. Mit et opkoemen van de moederne mobiliteit, mit auto's, mit et wegtrekken van de veule darpsluui naor de stejen (industralisering) en mit et opkoemen van massamedia, die allinnig mer de standardtaal gebruken, was et belangrieker ewörden dat de meensen oek de standardtaal leerden.
 
-In sommige delen van et taalgebied is et Nedersaksies tegenswoordig allinnig nog mer de taal van de wat ouwere luui, in aandere delen is et de normale umgangstaal, mit soms zelfs een meerderheid an dialektsprekers, allewel dat bie de jongeluui tegenswoordig al wat minder is. 
+In sommige delen van et taalgebied is et Nedersaksies tegenswoordig allinnig nog mer de taal van de wat ouwere luui, in aandere delen is et de normale umgangstaal, mit soms zelfs een meerderheid an dialektsprekers, allewel dat bie de jongeluui tegenswoordig al wat minder is.
 
 ==Erkenning==
 Nederlaand erkent et Nedersaksies officieel as [[streektaal]] en steunt et op een beparkt nivo, zo as beschreven steet in deel II van et [[Europees Haandvest veur regionale talen of talen van minderhejen]], toch wördt derveur estrejen um et Nedersaksies onder deel III erkend te kriegen. Deur et haandvest is et Nedersaksies in de [[Europese Unie]] een officieel erkende streektaal. Oek Duutslaand hef et haandvest etekend, en erkent en steunt et Nedersaksies (daor heet et officieel ''Niederdeutsch''). In de deelstaoten [[Bremen]], [[Hambörg|Hamburg]], [[Mecklenburg-Veur-Pommeren]], [[Nedersaksen]] en [[Sleeswiek-Holstein]] wördt de taal erkend volgens deel III van et haandvest; in de deelstaoten [[Brandenbörg|Braandenburg]], [[Noordrhain-Westfele|Noordrijn-Westfaolen]] en [[Saksen-Anhalt]] volgens deel II. Dit betekent dat de steun in de zudelike Noord-Duutse staoten (et Nedersaksiese grensgebied) kleiner is; in de meer noordelike staoten, waor as ze meer streektaal gebruken, is de steun wat groter.
 
 In 2012 hef minister van Binnenlaandse zaken [[Liesbeth Spies]] laoten weten dat ze der niks veur veult um et Nedersaksies te erkennen as taal; et zol te duur ween. De provincies Groningen, Drenthe, Overiessel, Gelderlaand en Frieslaand hebben der eigen hier niet bie neereleegd en hebben gezamenlik een petisie op-estart um et alsnog onder deel III te laoten erkennen. Oek et CDA en D66 wollen dat minister Spies heur besluut sol herzien.
 
-In 2013 wördden der naor anleiding van een debat over et gebruuk van et [[Frais|Fries]] een mosie in-ediend um et Neddersaksies asnog erkent to kriegen. Disse mosie wördden op 4 juni 2013 aofekeurd deur de Tweede Kamer. 
+In 2013 wördden der naor anleiding van een debat over et gebruuk van et [[Frais|Fries]] een mosie in-ediend um et Neddersaksies asnog erkent to kriegen. Disse mosie wördden op 4 juni 2013 aofekeurd deur de Tweede Kamer.
 
 ==Et Nedersaksies-Nederduutse dialektkontinuüm==
 De dialekten van et Nedersaksies vormen een [[taalkontinuüm]] mit de dialekten van noordelik [[Duutslaand]]. Daorumme wörden alle dialekten van de [[Veluwe]] tot an de [[Pooln|Poolse]] grens ezien as één taal, oek al besteet der gien standardvorm van.
 
 Toch besteet der een vrie groot verschil tussen et [[Nederlaands Leegsaksisch|Nederlaands-Nedersaksies]] en et [[Duuts-Nedersaksisch|Duuts-Nedersaksies]], een verschil dat alsmer groter wördt. Et Nedersaksies in Nederlaand steet onder drok van et [[Nederlaands]] en nimp daor steeds meer eigenschappen van over, veural an de westkaante waor et een dialektkontinuüm vormp mit de [[Nederfrankies]]e dialekten. Et Nedersaksies an de Duutse kaante hef van doon mit een starke invleud van et [[Duuts]] (Hoogduuts), die et een aandere kaante uutdrif, veural an de zuudkaante waor et een dialektkontinuüm vormp mit et Hoogduuts. Zokken verschillen zie'j veural a'j kieken naor de ontlening van nieje woorden en naor de schriefwieze. Zo hef et Duuts-Nedersaksies de zongenaamde ''Großschreibung'' (et schrieven van heufdwoorden mit heufdletters) overeneumen van et Hoogduuts, terwiel dat verschiensel in de spelling van de Nederlaands-Nedersaksiese dialekten van [[Nederlaand]] nargens veurkömp.
 
-Wat de sprekers zelf angeet, hebben de Nedersaksiese sprekers in Nederlaand der over et algemeen gien meuite mee um an te nemen dat ze in et noordelike deel Duutslaand een zelfde soort dialekten praoten. Aandersumme vienen de meeste Nedersaksiese sprekers uut Duutslaand niet dat de taal deurlöp op Nederlaands grondgebied. 
+Wat de sprekers zelf angeet, hebben de Nedersaksiese sprekers in Nederlaand der over et algemeen gien meuite mee um an te nemen dat ze in et noordelike deel Duutslaand een zelfde soort dialekten praoten. Aandersumme vienen de meeste Nedersaksiese sprekers uut Duutslaand niet dat de taal deurlöp op Nederlaands grondgebied.
 
 ===Taalgrens===
 De heufdverdeling van et Nedersaksies löp zo as ezeegd 'niet' langes et geschei van [[Nederlaand]] en [[Duutslaand]]. Integendeel: vake heurt een Nedersaksies dialekt uut Nederlaand bie een groter Duuts gebied. Zo is et grootste gedeelte van et Nedersaksies een onderdeel et [[Westfaals|Westfaols]] en heurt et [[Grunnegs|Gronings]] bie et Noord-Nedersaksies, veural bie et [[Oostfreisk Nederduutsk|Oostfries]]. Toch is et idee van de rieksgrens as taalgrens nog niet zo'n slicht idee: veural in de woordeschat bin der veule overeenkomsten tussen de dialekten an de Nederlaandse kaante, dit kömp deurdat - zo as hierboven al beschreven steet - der deur de eeuwen hinne, in Nederlaand naor et Nederlaands ekeken is veur nieje woorden en in Duutslaand naor et Duuts, deur disse ontwikkeling bin de dialekten soms iezelig vere uut mekaar egreuid. Et Gronings is een kleine uutzundering, veule Groningse woorden koemen oek in et [[Oostfreisk Nederduutsk|Oostfries]] veur.
@@ -110,14 +110,14 @@ Et antal sprekers van et Nedersaksies (in [[Nederlaand]]) is volgens een telling
 
 Et antal sprekers van et [[Nederlaands Leegsaksisch|Nederlaands-Nedersaksies]] in vergelieking tot aandere talen van Nederlaand:
 * Nedersaksies 1.798.000 <ref>[http://taal.phileon.nl/nedersaksisch.php Streektaal.net over Nedersaksisch]</ref>
-* [[Limburgs]] 825.000 <ref>[http://taal.phileon.nl/lim_situatie.php Streektaal.net over Limburgs] </ref>
+* [[Limburgs]] 825.000 <ref>[http://taal.phileon.nl/lim_situatie.php Streektaal.net over Limburgs]</ref>
 * [[Westerlauwers Fries|Fries]] 453.000 <ref>[http://taal.phileon.nl/fries.php Streektaal.net over Fries]</ref>
 * [[Nederlaandse gebaorentaal]] 20.000
 * [[Papiaments]] 13.000 
 * [[Engels]] 5.000
 
 ===Duutslaand===
-Et antal aktieve sprekers van et Nedersaksies wördt veur Duutslaand vake rond de 5,5 miljoen eschat,<ref>Volgens http://www.staff.uni-oldenburg.de/gabriele.diekmann-droege/9361.html</ref> waorvan zo'n vier miljoen meensen de taal goed tot uutstekend kunnen spreken.<ref>27% van bevolking van Sleeswiek-Holsteen, 23% van Mekelenburg-Veur-Pommeren, 14% van Nedersaksen, 10% van Noordrijn-Westfaolen en nog es 5% van Braandenburg en Saksen-Anhalt, samen zo'n vier miljoen – nog niet inbegrepen bin Hamburg en Bremen en de rond 200.000 sprekers van et [[Plautdietsch]], die overwegend buten de onderzeuksgebiejen woenen, antallen volgens [http://www.germsem.uni-kiel.de/ndnl/materialien/Lehre%20Prof.%20Elmentaler%20Sommer%2010/pdf-Folien%20Vorlesung%20Standard%20und%20Substandard%20SoSe%202010/Kopie%20von%20pdf-Folien/8.pdf ''Vorlesung „Niederdeutsch in Geschichte und Gegenwart“ – Niederdeutsch heute: Eine Bestandsaufnahme''] (citaot van Frerk Möller: ''Plattdeutsch im 21. Jahrhundert. Bestandsaufnahme und Perspektiven.'' Leer 2008, S. 22&nbsp;f.)</ref> Zo'n 10,2 miljoen Duutsers hebben enige passieve kennis van et Nedersaksies en zo'n twee miljoen meensen spreken et vake.<ref> Volgens http://www.staff.uni-oldenburg.de/gabriele.diekmann-droege/9361.html</ref> Hierbie koemen de rond 200.000 sprekers van et [[Plautdietsch]], die overwegend buten de onderzeuksgebiejen woenen en bin daorumme dus oek niet mee-eneumen in de telling. Et antal passieve sprekers, dit wil zegen de meensen die et Nedersaksies verstaon, wördt vake mit tien miljoen en hoger an-egeven veur Duutslaand, mer disse antallen kunnen oek veule hoger liggen (kiek hierboven).
+Et antal aktieve sprekers van et Nedersaksies wördt veur Duutslaand vake rond de 5,5 miljoen eschat,<ref name="staff.uni-oldenburg.de">Volgens http://www.staff.uni-oldenburg.de/gabriele.diekmann-droege/9361.html</ref> waorvan zo'n vier miljoen meensen de taal goed tot uutstekend kunnen spreken.<ref>27% van bevolking van Sleeswiek-Holsteen, 23% van Mekelenburg-Veur-Pommeren, 14% van Nedersaksen, 10% van Noordrijn-Westfaolen en nog es 5% van Braandenburg en Saksen-Anhalt, samen zo'n vier miljoen – nog niet inbegrepen bin Hamburg en Bremen en de rond 200.000 sprekers van et [[Plautdietsch]], die overwegend buten de onderzeuksgebiejen woenen, antallen volgens [http://www.germsem.uni-kiel.de/ndnl/materialien/Lehre%20Prof.%20Elmentaler%20Sommer%2010/pdf-Folien%20Vorlesung%20Standard%20und%20Substandard%20SoSe%202010/Kopie%20von%20pdf-Folien/8.pdf ''Vorlesung „Niederdeutsch in Geschichte und Gegenwart“ – Niederdeutsch heute: Eine Bestandsaufnahme''] (citaot van Frerk Möller: ''Plattdeutsch im 21. Jahrhundert. Bestandsaufnahme und Perspektiven.'' Leer 2008, S. 22&nbsp;f.)</ref> Zo'n 10,2 miljoen Duutsers hebben enige passieve kennis van et Nedersaksies en zo'n twee miljoen meensen spreken et vake.<ref name="staff.uni-oldenburg.de"/> Hierbie koemen de rond 200.000 sprekers van et [[Plautdietsch]], die overwegend buten de onderzeuksgebiejen woenen en bin daorumme dus oek niet mee-eneumen in de telling. Et antal passieve sprekers, dit wil zegen de meensen die et Nedersaksies verstaon, wördt vake mit tien miljoen en hoger an-egeven veur Duutslaand, mer disse antallen kunnen oek veule hoger liggen (kiek hierboven).
 
 ===Denemarken===
 In Denemarken spreekt allinnig nog een fraksie van de Duutse minderheid (zo'n 20.000 meensen) nog [[Noord-Sleeswieks]].
@@ -145,7 +145,7 @@ De Nedersaksiese streektaal wördden volgens dr. [[Geert Driessen]] van onderzeu
 
 ==Talige kenmarken==
 ===Klankverschuving===
-Liekas de [[Anglo-Friese talen]] en de [[Noord-Germaanse talen]], is et Nedersaksies niet beïnvleud deur de Hoogduutse klankverschuving behalven de ouwe klank {{IPA|/ð/}} die verscheuven is naor /d/. 
+Liekas de [[Anglo-Friese talen]] en de [[Noord-Germaanse talen]], is et Nedersaksies niet beïnvleud deur de Hoogduutse klankverschuving behalven de ouwe klank {{IPA|/ð/}} die verscheuven is naor /d/.
 
 In de tabel hieronder zie'j een koppel overeenkomsten en verschillen tussen de verschillende talen.
 
@@ -283,7 +283,7 @@ De uuzn ebn een geut van greune varf. Een vrouw et zout waoter uut de ketel in e
 De huuzn hebm een geute van grune varve. Een vrouw hef zolt water uut de ketel in een bakkie of pottie doan. ''([[Weiteveen]])''
 
 ====[[Zuudwest-Zuud-Drèents]]====
-De huuzn hebt een geute van grune varve. Een vrouwe hef zolt water uut de ketel in een bakkien of pottien edoan<small>(</small>e<small>)</small>. ''([[Ni'jlusen]])''<br />
+De huuzn hebt een geute van grune varve. Een vrouwe hef zolt water uut de ketel in een bakkien of pottien edoan<small>(</small>e<small>)</small>. ''([[Ni'jlusen]])''
 
 ===[[Sallaands]]===
 De uuzn ebn een geute van grune värve. Een vrouwe ef zolt water uut de ketel in een bäkkien of pöttien edaon. ''([[Kampen (Overiessel)|Kampen]])''<br />
@@ -297,13 +297,13 @@ De hoeze'''?''' hebt ne götte van greune varwe. Ne vrouw hef zout water oet de 
 De huzen hebt een geute mit gruuine varve. Een Vrouw hef zolt water uut de ketel in een bakkien of pottien edoane. ''([[Luttn]])''
 
 ===[[Tweants|Twents]]===
-====[[Oaveriessels#West-_en_Zuud-Twents|West- en Zuud-Twents]]====
+====[[Oaveriessels#West- en Zuud-Twents|West- en Zuud-Twents]]====
 De huze hebt ne gote van gruune varve. Ne vrouw hef zolt water uut een kettel in een bekske/bekken/bakkie of pötke/pötje/pöttie edoan. ''([[Wierdn]])''<br />
 De huuze hebt ne gotte van greune voarve. Ne vrouwe hef zoolt water oet een kettel in een bäkkn of pötjen edoan(e). ''([[Riesn]])''<br />
 De huuze hebt ne gotte van gruune vaarve. Ne vrouwe hef zoolt water oet een kettel in een bäksken of een pötjen edoane. ''([[Eanter]])''<br />
 De huze hebt ne götte van greune varf. Ne vrouw hef zòolt water oet een kettel in een bekske of pötje edoane. ''([[Hoksebarge]])''
 
-====[[Oaveriessels#Noord-_en_Oost-Twents|Noord- en Oost-Twents]]====
+====[[Oaveriessels#Noord- en Oost-Twents|Noord- en Oost-Twents]]====
 De huze hebt ne göt van greune vaarf. Ne vrouw hef zolt water oet een kettel in een bekke of pötke doan. ''([[Tubbargn]])''<br />
 De huus hebt ne göt van greune vaarf. Ne vrouw hef zolt water oet een kettel in een bekke/bekske of putke doan. ''([[Rossum (Oaveriessel)]])''<br />
 De huus hebt ne göt van greune vèerf. Ne vrouw hef zòolt water oet een kettel in een bekske of putke doan. ''([[De Lutte]])''
@@ -320,7 +320,7 @@ De huzen hen een geut van greune vaarf. Een vrouw het zout waoter uut een ketel 
 De huze hen een geut van greune vaarf. Een vrouw het zout waoter uut een ketel in een bakje of potsje edaon. ''([[Otterlo]])''<br />
 De huze hen een geut van grune varf. Een vrouw het zout waoter uut een ketel in een bakjen of potsjen edaon. ''([[Hoenderloo]])''<br />
 De huze hebbe/hen een geut van greune vaarf. Een vrouw het zout waoter uut een ketel in een bakje of potsje edaon. ''([[Sjaarpezeel]])''<br />
-De huuze hebbe en geut van gruune varfe. Een vrouwe het zout waotre uut 'n ketel in 'n bakjen of potjien edaon. ''([[Ugchelen]])''<br />
+De huuze hebbe en geut van gruune varfe. Een vrouwe het zout waotre uut 'n ketel in 'n bakjen of potjien edaon. ''([[Ugchelen]])''
 
 ==Taalkodes uut de ISO 639-3-reeks==
 Elk Nedersaksies heufddialekt uut Nederlaand (behalven et Urkers) hef zien eigen officiële taalkode. Hieronder ku'j disse taalkodes vienen:
@@ -339,7 +339,7 @@ Elk Nedersaksies heufddialekt uut Nederlaand (behalven et Urkers) hef zien eigen
 *[[Nedersaksische taalwiezers]]
 *[[Liest van zinnen ien de Leegsaksische dialekten]]
 *[[Platduuts]]
-*[[Wikipedie:Nedersaksies beluusteren]]
+*[[Wikipedia:Nedersaksies beluusteren]]
 
 == Referensies ==
 <references />
@@ -389,7 +389,7 @@ Elk Nedersaksies heufddialekt uut Nederlaand (behalven et Urkers) hef zien eigen
 * [http://www.torf.nl/ Törf] (Gronings - Groningen, Nederlaand)
 * [http://www.eltjedoddema.nl/ Eltje Doddema] (Veenkoloniaals - Groningen, Nederlaand)
 * [http://www.bohfoitoch.nl/ Boh foi toch] (Achterhoeks - Gelderlaand, Nederlaand)
-* [http://www.helmutdebus.de/ Helmut Debus] (Duuts-Nedersaksies - Nedersaksen, Duutslaand) 
+* [http://www.helmutdebus.de/ Helmut Debus] (Duuts-Nedersaksies - Nedersaksen, Duutslaand)
 
 '''Overig:'''
 * http://www.plattmaster.de/
