--- a/Pertaol:Stellingwarf.mw
+++ b/Pertaol:Stellingwarf.mw
@@ -9,11 +9,11 @@ __NOTOC__ __NOEDITSECTION__
 |width=50% bgcolor=#f0f4ff style="border-style:solid;border-width:1px;border-color:silver;padding:1em;padding-top:0;"|
 ===De Stellingwarven===
 [[Bestaand:Vlagge Stellingwarf.jpeg|125px|border|right|Vlagge van de Stellingwarf]]
-Welkom bi'j de pertaol veur de Stellingwarven! Hier ku'j een protte vienen wat over de Stellingwarven gaot, en ok nog in et [[Stellingwarfs]] schreven is. D'r bin al [[:Kategorie:Stellingwarfs artikel|{{PAGESINCATEGORY:Stellingwarfs artikel}} artikels]] in et Stellingwarfs! 
+Welkom bi'j de pertaol veur de Stellingwarven! Hier ku'j een protte vienen wat over de Stellingwarven gaot, en ok nog in et [[Stellingwarfs]] schreven is. D'r bin al [[:Kategorie:Stellingwarfs artikel|{{PAGESINCATEGORY:Stellingwarfs artikel}} artikels]] in et Stellingwarfs!
 
 Kiek ok mar es op:
-*[[Wikipedie:VeurbladStellingwerfs|Veurblad van Wikipedie in et Stellingwarfs]]
-*[[Wikipedie:Stellingwarfs kieken en beluusteren|Stellingwarfs kieken en beluusteren]]
+*[[Wikipedia:VeurbladStellingwerfs|Veurblad van Wikipedie in et Stellingwarfs]]
+*[[Wikipedia:Stellingwarfs kieken en beluusteren|Stellingwarfs kieken en beluusteren]]
 *[[Stellingwarver taelwiezer]]
 
 |width="50%" bgcolor="#f0f4ff" style="border-style:solid;border-width:1px;border-color:silver;padding:1em;padding-top:0;"|
@@ -36,7 +36,7 @@ De [[Stellingwarven]] bestaon uut [[Weststellingwarf]] en [[Ooststellingwarf]] i
 *[[Zeuvenwoolden]]
 
 ===Meensken===
-[[Peter Stuyvesant]] (kloniaol bestuurder) - [[Onno Zwier van Haren‎]] (politikus en dichter) - [[Monique Knol]] (hadfietster) - [[Gerrit de Vries]] (hadfietser) - [[Hendrik Johannes Bergveld]] (schriever) - [[Johan Veenstra]] (schriever) - [[Carolien Hunneman]] (zangeresse)
+[[Peter Stuyvesant]] (kloniaol bestuurder) - [[Onno Zwier van Haren]] (politikus en dichter) - [[Monique Knol]] (hadfietster) - [[Gerrit de Vries]] (hadfietser) - [[Hendrik Johannes Bergveld]] (schriever) - [[Johan Veenstra]] (schriever) - [[Carolien Hunneman]] (zangeresse)
 
 |- valign=top
 |width=50% bgcolor=#f0f4ff style="border-style:solid;border-width:1px;border-color:silver;padding:1em;padding-top:0;"|
@@ -49,7 +49,7 @@ De [[Stellingwarven]] bestaon uut [[Weststellingwarf]] en [[Ooststellingwarf]] i
 |width="50%" bgcolor="#f0f4ff" style="border-style:solid;border-width:1px;border-color:silver;padding:1em;padding-top:0;"|
 ===Tael & kultuur in de Stellingwarven===
 [[Bestaand:Taalgrensmonument.jpg|125px|right|Taelgreensmonument]]
-In de Stellingwarven wodt vanoolds Stellingwarfs praot. Et [[Stellingwarfs]] is een [[Friso-Saksische toalen|Friso-Saksische tael]] en een variant van et [[Nedersaksisch]]. In de negentiende en twintigste ieuw mos et dialekt an et [[Nederlaans]] en et [[Fries]] terrein votgeven. 
+In de Stellingwarven wodt vanoolds Stellingwarfs praot. Et [[Stellingwarfs]] is een [[Friso-Saksische toalen|Friso-Saksische tael]] en een variant van et [[Nedersaksisch]]. In de negentiende en twintigste ieuw mos et dialekt an et [[Nederlaans]] en et [[Fries]] terrein votgeven.
 
 *[[Stellingwarver Schrieversronte|De Schrieversronte]]
 *[[Stellingwarver spelling]]
