/* top */linkfix veur hernömde naamruumte, replaced: ‎]] → ]], [[Wikipedie:Nedersaksisch beluustern|'''Nedersaksisch beluustern''']] → [[Wikipedia:Nedersaksisch beluustern|'''Nedersaksisch beluustern''']] using [[Project:AWB|AWB]]

--- a/Portaol:Nedersaksische_cultuur.mw
+++ b/Portaol:Nedersaksische_cultuur.mw
@@ -3,8 +3,6 @@ __NOTOC__
 <div style="border: 1px silver solid; background: #f0f0f0; margin:auto;">
 [[Ofbeelding:NDS-kultu8.jpg|center|Logo]]
 
-
-
 __NOTOC__ __NOEDITSECTION__
 {| cellspacing=3
 |- valign=top
@@ -16,7 +14,8 @@ __NOTOC__ __NOEDITSECTION__
 • [[Achterhooksen taalwiezer]]&nbsp;• [[Drèentse taolwiezer]]<br />
 • [[Grönnegse toalwiezer]]&nbsp;• [[Sallaanse taalwiezer]]<br />
 • [[Stellingwarver taelwiezer]]&nbsp;• [[Tweantsen taalwiezer]]<br />
-• [[Veluwse taalwiezer]]&nbsp;• [[Urker taolwezer]]&nbsp;• [[Oostfreiske toulwiezer]]<br /><br />
+• [[Veluwse taalwiezer]]&nbsp;• [[Urker taolwezer]]&nbsp;• [[Oostfreiske toulwiezer]]
+
 [[Nedersaksisch woordenboek|'''Woorden in alle Nedersaksische dialecten''']]
 <br />[[Liest van zinnen ien de Leegsaksische dialekten|Veurbieldzinnen in de Nedersaksische dialecten]]<br />
 [[Nedersaksisch#Veurbeeldzinnen|Meer veurbieldzinnen in de Nedersaksische dialecten]]<br />
@@ -33,7 +32,7 @@ __NOTOC__ __NOEDITSECTION__
 • [[Harm Tiesing]]&nbsp;• [[Johan Veenstra]]<br />
 • [[Peter van der Velde]]<br />
 • [[Nedersaksische tiedschriften]]&nbsp;• ''[[Krödde (tiedschrift)|Krödde]]''&nbsp;• ''[[Oeze Volk/Maandewark]]''&nbsp;• ''[[De Ovend|De ovend]]''&nbsp;• ''[[De Moespot]]''&nbsp;• ''[[Roet (tiedschrift)|Roet]]''&nbsp;• ''[[De Nieje Tied]]''<br />
-• ''[[Kopstôkken (tiedschrift)|Kopstôkken]]''&nbsp;• ''[[Diesel (tiedschrift)|Diesel]]''<br />
+• ''[[Kopstôkken (tiedschrift)|Kopstôkken]]''&nbsp;• ''[[Diesel (tiedschrift)|Diesel]]''
 
 |- valign=top
 |width=50% bgcolor=white style="border-style:solid;border-width:1px;border-color:silver;padding:1em;padding-top:0;"|
@@ -44,7 +43,7 @@ __NOTOC__ __NOEDITSECTION__
 ''Zieperiegen''<br />
 [[Van Jonge Leu en Oale Groond]]&nbsp;• [[Boven Wotter]]
 ''Radiopergramma's:'' [[Aksent]]
-*[[Wikipedie:Nedersaksisch beluustern|'''Nedersaksisch beluustern''']]
+*[[Wikipedia:Nedersaksisch beluustern|'''Nedersaksisch beluustern''']]
 
 |width="50%" bgcolor=White style="border-style:solid;border-width:1px;border-color:silver;padding:1em;padding-top:0;"|
 <span style="font-size:larger;font-weight:bold;">Orgenisaoties</span>
@@ -69,9 +68,9 @@ __NOTOC__ __NOEDITSECTION__
 *[[Sallaand]]: [[Euifeest]] ([[Asselt]]), [[Bissing]] ([[Ommen]])
 *[[Sallaand]]: [[Stöppelhaene]] ([[Raolte]])
 *[[Tweante]]: Poasken in [[Oatmörsken]]
-• [[karbietskeetn]]&nbsp;• [[klootscheetn|klootskeetn]]&nbsp;• [[eierkuuln]]&nbsp;• [[mirreweenterhoorn|mirreweenterhoornbloazn]]<br />
-• [[autorodeo]]&nbsp;• [[Boake|boakebraandn]]&nbsp;• [[intrekkersmoal]]&nbsp;• [[kroamschudden]]<br />
-• [[neutenschaiten]] • [[noaberschap]] • [[trekkerslep]]<br /> 
+• [[karbietskeetn]]&nbsp;• [[klootscheetn|klootskeetn]]&nbsp;• [[eierkuuln]]&nbsp;• [[mirreweenterhoorn]]bloazn<br />
+• [[autorodeo]]&nbsp;• [[boake]]braandn&nbsp;• [[intrekkersmoal]]&nbsp;• [[kroamschudden]]<br />
+• [[neutenschaiten]] • [[noaberschap]] • [[trekkerslep]]
 *[[Nedersaksische spöllegies]]
 *[[Olle leven van vrouger ien de Leegsaksische gebieden|'t Lèven van vrogger]]
 *[[Nedersaksische sagen en legendes]]
@@ -80,7 +79,7 @@ __NOTOC__ __NOEDITSECTION__
 <span style="font-size:larger;font-weight:bold;">Kurendrieveri'je</span>
 [[Ofbeelding:Helligen Hendrik.jpg|right|150px|Helligen Hendrik]]
 * [[Nedersaksische humor]]
-* [[Nedersaksische skeeldwöarde‎]]
+* [[Nedersaksische skeeldwöarde]]
 
 ''Kurendrievers''
 * [[Evert Baptist]]
@@ -95,15 +94,15 @@ __NOTOC__ __NOEDITSECTION__
 |width=50% bgcolor=white style="border-style:solid;border-width:1px;border-color:silver;padding:1em;padding-top:0;"|
 <span style="font-size:larger;font-weight:bold;">Meziekgroepen en zangers</span>
 [[Ofbeelding:Daniël Lohues.png|left|170px|Daniël Lohues]]
-[[Boh Foi Toch]] &#9834; [[Bukkes]]<br />
-[[Duo Karst]] &#9834; [[Höllenboer]]<br />
-[[Jajem (band)|Jajem]] &#9834; [[Bennie Jolink]]<br />
+[[Boh Foi Toch]] ♪ [[Bukkes]]<br />
+[[Duo Karst]] ♪ [[Höllenboer]]<br />
+[[Jajem (band)|Jajem]] ♪ [[Bennie Jolink]]<br />
 [[Jovink en de Voederbietels]]<br />
-[[Hans Keuper]] &#9834; [[Margaretha Kleine]]<br />
-[[Daniël Lohues]] &#9834; [[Egbert Meyers]]<br />
-[[Erwin Nyhoff]] &#9834; [[Gooswijn van Rees]]<br />
-[[Ede Staal]] &#9834; [[Mooi Wark]] &#9834; [[Normaal]] &#9834; [[Skik]]  &#9834; [[Erwin de Vries]]<br />
-[[Nedersaksisch Vocaal Ensemble]] &#9834; [[Twentse Jazzerieje]]
+[[Hans Keuper]] ♪ [[Margaretha Kleine]]<br />
+[[Daniël Lohues]] ♪ [[Egbert Meyers]]<br />
+[[Erwin Nyhoff]] ♪ [[Gooswijn van Rees]]<br />
+[[Ede Staal]] ♪ [[Mooi Wark]] ♪ [[Normaal]] ♪ [[Skik]]  ♪ [[Erwin de Vries]]<br />
+[[Nedersaksisch Vocaal Ensemble]] ♪ [[Twentse Jazzerieje]]
 *'''[[Nedersaksische meziek]]'''
 
 |width=50% bgcolor=White style="border-style:solid;border-width:1px;border-color:silver;padding:1em;padding-top:0;"|
@@ -123,18 +122,18 @@ __NOTOC__ __NOEDITSECTION__
 
 |width=50% bgcolor=White style="border-style:solid;border-width:1px;border-color:silver;padding:1em;padding-top:0;"|
 <span style="font-size:larger;font-weight:bold;">Emancipaotie: de [[Nedersaksische Beweging]]</span>
-• [[Hendrik Entjes]]&nbsp;• [[Jan Naarding]]&nbsp;• [[Arnold Rakers]]&nbsp;• ''[['t Swieniegeltje]]''&nbsp;• [[Europees Haandves veur regionale taolen of taolen van minderheen|Erkenning van 't Nedersaksisch deur de oaverheid]]<br />
+• [[Hendrik Entjes]]&nbsp;• [[Jan Naarding]]&nbsp;• [[Arnold Rakers]]&nbsp;• ''[['t Swieniegeltje]]''&nbsp;• [[Europees Haandves veur regionale taolen of taolen van minderheen|Erkenning van 't Nedersaksisch deur de oaverheid]]
 
 |- valign=top
 |width=50% bgcolor=White style="border-style:solid;border-width:1px;border-color:silver;padding:1em;padding-top:0;"|
 <span style="font-size:larger;font-weight:bold;">[[Nedersaksische volksleidjes|Volksliedties]]</span>
 [[Ofbeelding:Groningen, Peerd van ome Loeks.jpg|90px|left|Peerd van ome Loeks]]
-*''[[Nedersaksische_volksleidjes#Achter_op_Scheloo_is_'t_knollengruin_bevroren|Achter op Scheloo]]''
-*''[[Nedersaksische_volksleidjes#Peerd_van_Ome_Loeks|Peerd van Ome Loeks]]''
-*''[[Nedersaksische_volksleidjes#Damster_Kaarms|Damster Kaarms]]''
-*''[[Nedersaksische_volksleidjes#Ain_boer_wol_noar_zien_noaber_tou|Ain boer wol noar zien noaber tou]]''
-*''[[Nedersaksische_volksleidjes#Driekusman|Driekusman]]''
-*''[[Nedersaksische_volksleidjes#Stille_mear_mien_Tuutje|Stille mear mien Tuutje]]''
+*''[[Nedersaksische volksleidjes#Achter op Scheloo is 't knollengruin bevroren|Achter op Scheloo]]''
+*''[[Nedersaksische volksleidjes#Peerd van Ome Loeks|Peerd van Ome Loeks]]''
+*''[[Nedersaksische volksleidjes#Damster Kaarms|Damster Kaarms]]''
+*''[[Nedersaksische volksleidjes#Ain boer wol noar zien noaber tou|Ain boer wol noar zien noaber tou]]''
+*''[[Nedersaksische volksleidjes#Driekusman|Driekusman]]''
+*''[[Nedersaksische volksleidjes#Stille mear mien Tuutje|Stille mear mien Tuutje]]''
 
 |width=50% bgcolor=White style="border-style:solid;border-width:1px;border-color:silver;padding:1em;padding-top:0;"|
 <span style="font-size:larger;font-weight:bold;">[[Nedersaksische gerechten|Gerechten]]</span>
