/* Westelik Nedersaksies */linkfix veur hernömde naamruumte, replaced: [[Wikipedie:Algemene Nedersaksiese Schriefwieze|ANS]] → [[Wikipedia:Algemene Nedersaksiese Schriefwieze|ANS]] using [[Project:AWB|AWB]]

--- a/Terminologie_Nederduuts-Platduuts-Nedersaksisch.mw
+++ b/Terminologie_Nederduuts-Platduuts-Nedersaksisch.mw
@@ -15,7 +15,7 @@ Umdat t taolgebied van t '''Oost-Nedersaksies''' vrouger nich tou t hartogdom Sa
 ==Westelik Nedersaksies==
 De term '''Westelik Nedersaksies''' kumpt ok was veur um de Nedersaksiese dialekten te beschrieven in Nederland, mit oetzundering vön de [[Grunnegs|Grönnigse]] varianten, man mit t [[Westerwoolds]], [[Eemslaands]], t [[Waterplat|Bentumers]] on t [[Westmuunsterlaands]]. Normaolerwies wordt dizze varianten tou t Westfeels reikend, man deurdat der n dik verschil bestaeit wat de breking angaeit, wordt de westelike varianten sums ok wel apaart zein. Taolkundigen hebt dit underscheid aanders nog nich offisieel beschreven, behaalve under de naom ''Frankies-Westfeels''. Dizze term is tegenswoordig nich meer gangbaor.
 
-{{dia|Schreven up Westerwoolds in de [[Wikipedie:Algemene Nedersaksiese Schriefwieze|ANS]]}}
+{{dia|Schreven up Westerwoolds in de [[Wikipedia:Algemene Nedersaksiese Schriefwieze|ANS]]}}
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Nedersaksies]]
