/* Onderwies */linkfix veur hernömde naamruumte, replaced: [[Wikipedie:Algemene Nedersaksiese Schriefwieze|Algemiene Nedersaksiese Skriefwieze]] →... using [[Project:AWB|AWB]]

--- a/Twiede_Germaanse_klaankverskoeving.mw
+++ b/Twiede_Germaanse_klaankverskoeving.mw
@@ -159,9 +159,9 @@ As veurbield van de effekten van de verskoeving kunnen de volgende twie teksten 
 :''Deutskenspiegel'': "De man is ok beskarmer van zien vrouw / as ze mit him trouwd is. / De vrouw is ok t buisien van de man / as ze naor zien berre gaot / Nao de dood van de man is ze vri'j van de rechten van de man.")
 
 ==Onderwies==
-In t [[veurzet onderwies]] wordt de Hoogduutse klaankverskoeving vaeke apart bespreuken as onderdiel van t vak Duuts. An de haand van [[etymologie|etymologies]] verwaante woorden (''kognaoten'') in t Duuts en Nederlaands (bi'jgelieks ''ich'' en ''ik'') wordt t zo gemakkeliker de betekenis van Duutse woorden mitien te aachterhaelen.
+In t [[veurzet onderwies]] wordt de Hoogduutse klaankverskoeving vaeke apart bespreuken as onderdiel van t vak Duuts. An de haand van [[etymologie]]s verwaante woorden (''kognaoten'') in t Duuts en Nederlaands (bi'jgelieks ''ich'' en ''ik'') wordt t zo gemakkeliker de betekenis van Duutse woorden mitien te aachterhaelen.
 
-{{Dia|Dit artikel is skreven in de [[Wikipedie:Algemene Nedersaksiese Schriefwieze|Algemiene Nedersaksiese Skriefwieze]]}}
+{{Dia|Dit artikel is skreven in de [[Wikipedia:Algemene Nedersaksiese Schriefwieze|Algemiene Nedersaksiese Skriefwieze]]}}
 
-[[Kategorie:Stellingwarfs_artikel]]
+[[Kategorie:Stellingwarfs artikel]]
 [[Kategorie:Sproakleer]]
