[[mw:Special:MyLanguage/Help:Extension:Linter/self-closed-tag|Lint-fouten: Zelfsluitend element]] ([[WP:CW#Lint-fouten|help mee]])

--- a/Zuud-Hollaans_volkslied.mw
+++ b/Zuud-Hollaans_volkslied.mw
@@ -18,7 +18,7 @@
 :Daar zetelt Oranjes doorluchtig geslacht!
 :Aan jou, o Zuid-Holland, historisch land, historisch land
 :Aan jou, o Zuid-Holland, heb ik mijn hart verpand!
-<cite />
+</cite>
 
 [[Kategorie:West-Veluws artikel]]
 [[Kategorie:Nederlaands volkslaid]]
