--- a/Helge_Schneider.mw
+++ b/Helge_Schneider.mw
@@ -27,7 +27,6 @@ In 1977 begun he met verskeaidene bands op te treadn, woereunter ook zinne eegne
 van 1985 töt 1991 dee hee met in verskeaidene tellevisiepogrammaas. Hier ontwikkeldn hee zin eegnen stiel, den at t beste te beskriewn is as Antikomiek, den at besteet oet keenderachtigen onzin en nen miks van banale en anspreknde dinge.
 
 {{DEFAULTSORT:Schneider, Helge}}
-
-[[Kategorie: Tweants artikel]]
-[[Kategorie: Zanger]]
-[[Kategorie: Schriever]]
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Zanger]]
+[[Kategorie:Duutse schriever]]
