--- a/Middelfreesk.mw
+++ b/Middelfreesk.mw
@@ -5,9 +5,9 @@ Et '''middelfreesk''' was et [[Westlaauwers Frais|westlauwers freesk]] so as et 
 
 Nevvens de traditionele upvattings vül et begin van de middelfreeske periode ruweg samen mid et ende van de [[middeleewn|middeleywen]] ([[1500]]) en et uutbreaken van de [[Tachtigjoarigen Oorlog|Tachetigjårige Oorlog]] ([[1568]]). Döär de oaverhearsking van [[Frieslaand|Freeskland]] döär de [[Albrecht van Sassen|sassen]] (en later döär de [[Kårel V|habsbörgers]]) was an et ende van de [[14e eeuw|14. eyw]] et freesk as skryvtaal in unbruuk raked, wat vöär een grout deyl debet was an et feit dat et in Freeskland as bestüürstaal vervangen wordde döär et [[hollaands (dialekt)|hollandsk]]. Howel der mid de västiging van de [[Republik van de Verenigde Neaderlanden]], in [[1585]], een nye periode van vryheid anbrak, kraeg et freesk syn olde posity van vöär [[1498]] do neet wearumme.
 
-Dat had alles te maken mid de upkumst van [[Hollaand|Holland]] as et oaverhearskende deyl van de Republik, en mid de dårmid gepäärd gånde posity van et [[hollaans (dialekt)|hollandsk]] as de dominante taal in bestüürlike, [[rechtbanke|juridiske]] en [[geleuf|religiöse]] angeleagenheyden. Benamens et verskynen van de [[Ståtenvertaling]] (van de [[Biebel|Bybel]]), in [[1637]], was een mylpål vöär de invlood en de verspreiding van de upkummende [[Nederlaans|neaderlandske standardtaal]] (dee vöäral up et hollandsk baseerd was) en had desaströse gevolgen vöär de politike en måtskappelike ståtus en et taaleigen van et freesk en de andere [[minderheidstaal|minderheidstalen]] en [[dialekt]]en in de Republik. 
+Dat had alles te maken mid de upkumst van [[Groafschap Hollaand|Holland]] as et oaverhearskende deyl van de Republik, en mid de dårmid gepäärd gånde posity van et [[hollaans (dialekt)|hollandsk]] as de dominante taal in bestüürlike, [[rechtbanke|juridiske]] en [[geleuf|religiöse]] angeleagenheyden. Benamens et verskynen van de [[Ståtenvertaling]] (van de [[Biebel|Bybel]]), in [[1637]], was een mylpål vöär de invlood en de verspreiding van de upkummende [[Nederlaans|neaderlandske standardtaal]] (dee vöäral up et hollandsk baseerd was) en had desaströse gevolgen vöär de politike en måtskappelike ståtus en et taaleigen van et freesk en de andere [[minderheidstaal|minderheidstalen]] en [[dialekt]]en in de Republik. 
 
-Sodoonde wordde der in de middelfreeske periode håst niks in et freesk skreaven, behalve [[spreakwoord]]versamelings en et wark van geleagenheidsdichters. De groute uutsündering up dee reagel was [[Gysbert Japiks]] ([[1603]]-[[1666]]), een [[skoolmeister]] en [[vöärsanger]] uut [[Bolsward]], en eyn van de groutste [[skryver]]s en [[dichter]]s dee et freesk ooyt voordbrocht het. Mid syn [[dichtwark]], vertalings, breven en benamens de postuum in [[1668]] verskeane ''Friesche Rymlerye'' legde hy de basis vöär de moderne freeske [[literatuur]] en [[spelling]]. Andere, minder bekende middelfreeske skryvers wären [[Feike Hiddes van der Ploeg]], [[Eelke Meinerts]], [[Jan Althuysen]] en [[Simen Althuysen]]. Do rund [[1820]] een nye generåty freeske skryvers et lucht sag, mid as vöärnaamste verteagenwoordigers de bröörs [[Joost Hiddes Halbertsma|Joost]] en [[Eeltjen Hiddes Halbertsma]], wordde dat seen as et begin van et [[Nyfreesk]]e tydpark, temeyr umdat dat samenvül mid et untstån van de nyere breaking, een taalkündige vernying, in de meyrste freeske dialekten. 
+Sodoonde wordde der in de middelfreeske periode håst niks in et freesk skreaven, behalve [[spreakwoord]]versamelings en et wark van geleagenheidsdichters. De groute uutsündering up dee reagel was [[Gysbert Japiks]] ([[1603]]-[[1666]]), een [[skoolmeister]] en [[vöärsanger]] uut [[Bolsward]], en eyn van de groutste [[skryver]]s en [[dichter]]s dee et freesk ooyt voordbrocht het. Mid syn [[dichtwark]], vertalings, breven en benamens de postuum in [[1668]] verskeane ''Friesche Rymlerye'' legde hy de basis vöär de moderne freeske [[literatuur]] en [[spelling]]. Andere, minder bekende middelfreeske skryvers wären [[Feike Hiddes van der Ploeg]], [[Eelke Meinerts]], [[Jan Althuysen]] en [[Simen Althuysen]]. Do rund [[1820]] een nye generåty freeske skryvers et lucht sag, mid as vöärnaamste verteagenwoordigers de bröörs [[Joost Hiddes Halbertsma|Joost]] en [[Eeltjen Hiddes Halbertsma]], wordde dat seen as et begin van et [[Nyfreesk]]e tydpark, temeyr umdat dat samenvül mid et untstån van de nyere breaking, een taalkündige vernying, in de meyrste freeske dialekten.
 
 ==Periodisering==
 Der is årdig wat diskussy oaver de term en et begrip "middelfreesk". Dat holdt verband mid et feit dat by een protte andere talen de middelste en moderne taalperioden vöäl eyrder beginnen. So endiget in et [[Nederlaans|neaderlandsk]] de [[Ooldnederlaands|oldneaderlandsk]]e perioade al in [[1100]], wårnå et [[Middelnederlaands|middelneaderlandsk]]e tydpark van [[1100]] tot [[1500]] lopt en et [[Niejnederlaands|Nyneaderlandsk]] van [[1500]] tot nu. De meyrste andere [[West-Europa|Westeuropääske]] talen låten een soortgelyk beald seen. De readen vöär de latere periodisering in et freesk is dat dee taal vry beholdend was, mid as gevolg dat taalkündige vernyings dee in verwante talen al in de [[middeleewn|middeleywen]] plakvünden hadden, in et freesk pas nå 1500 döärvoord wordden. Nu is et oldfreesk allenig in skreaven form oaverleaverd, en et is neet wisse of de skryvtaal wel (heylendal) oavereynkwam mid de spreaktaal. [[Taalkunde|Taalkündige]] [[Pieter Duijff]] weas der in een uutgivte uut [[2002]] up dat et oaverleaverde oldfreesk vrywel allemåle in de form van [[wet]]steksten is, dee vake slim beholdend in höär taalgebruuk binnen. Mid andere woorden: et sol best künnen dat de spreaktaal him in dee tyd al vöäl vearder untwikkeld had.
