--- a/Germaanse_lotsbeduding.mw
+++ b/Germaanse_lotsbeduding.mw
@@ -1,15 +1,15 @@
 '''De germaanske bedüding van et lot''' geyt der van ho as de [[germanen]] oaver et lot dachtden. By ear was et lot de hougste macht, wår as de wearld achter an löpt.
 
 ==Lot==
-De germanen vöölden sich ait edreaven döär yts wat de wearld düt leaven en starven. Dit stünden sülvs boaven de goden en de vöärolder. Alles wörd döär et lot bepåld. Y künt der u alleynig mar an seen te skikken, want der underuut kummen kan geyneyne neet. In et bekende angelsassiske heldendicht [[Beowulf]] hevt et lot ouk een belangryke rolle.
+De germanen vöölden sich ait edreaven döär yts wat de wearld düt leaven en starven. Dit stünden sülvs boaven de goden en de vöärolder. Alles wörd döär et lot bepåld. Y künt der u alleynig mar an seen te skikken, want der under üüt kummen kan geyneyne neet. In et bekende angelsassiske heldendicht [[Beowulf]] hevt et lot ouk een belangryke rolle.
 
-Een stükkyn uut de [[Heliand]] gevt et germaanske lotsbenül in eyne sinne mooi an:
+Een stükkyn üüt de [[Heliand]] gevt et germaanske lotsbenül in eyne sinne mooi an:
 
 * ''So habed im wurdgiscapu metod gimarcod''
 
 Wat so yts beteakend as: 
 
-''So hevt et lot et uut-emeaten en emarkeyred.''
+''So hevt et lot et üüt emeaten en emarkeyred.''
 
 ==Namen==
 Et lot wördden med verskillende namen an-edüded. By de [[Vikings|noorske]] stammen wördden et ''Örlög'' enömed (wat in et oldsassisk ''Urlagi'' is), wat een oldere varsyn is van uns woord ''oorlog''. ''Oor'' is et sülvden as et (neaderlandsken) vöärvoogsel ''oer-'', en ''log'' kümt van ''leggen'' of een ander woord vöär ''eyd''.
