--- a/Noordwiekerholt.mw
+++ b/Noordwiekerholt.mw
@@ -21,6 +21,7 @@ webstee = [http://www.noordwijkerhout.nl www.noordwijkerhout.nl] |
 '''Noordwiekerholt''' ([[Nederlaands]]: ''Noordwijkerhout'') is n [[darp]] en vroggere [[gemiente (bestuur)|gemeente]] in de Nederlandse previnsie [[Zuud-Hollaand]] en hef ne oppervlakte van 23,40 km² (woarvan 0,80 km² water). Deur et darp löp den autoweg [[N206]]. Noabergemeenten bunt [[Lisse]], [[Teylingen]], [[Veurholt]] en [[Hillegom]].
 
 == Aandere darpen ==
+*[[Noordwiek]]
 *[[Den Zilk]]
 *[[Ruugenhook]]
 
