--- a/Alphen_an_den_Rijn_(gemeente).mw
+++ b/Alphen_an_den_Rijn_(gemeente).mw
@@ -1,5 +1,5 @@
 {{Gemeante |
-bestaandsnaam vlagge = Alphen_aan_den_Rijn_flag_outline.svg |
+bestaandsnaam vlagge = Vlag Alphen aan den Rijn.svg |
 bestaandsnaam woapn = Alphen_aan_den_Rijn_wapen_2014.svg |
 naam = Alphen an den Rijn |
 lokatie = LocatieAlphenAanDenRijn |
