--- a/Sliedrecht_(gemeente).mw
+++ b/Sliedrecht_(gemeente).mw
@@ -1,5 +1,5 @@
 {{Gemeante |
-bestaandsnaam vlagge =  Flag of Sliedrecht.svg |
+bestaandsnaam vlagge =  Sliedrecht vlag.svg |
 bestaandsnaam woapn = Coat_of_arms_of_Sliedrecht.svg |
 naam = Sliedrecht|
 lokatie = LocatieSliedrecht |
