--- a/Blesente.mw
+++ b/Blesente.mw
@@ -28,6 +28,7 @@ De blesente vie-j veural bie grote waoterplekken, plassen en meren, mar oek in [
 Ofbeelding:Meerkoet_nest_met_kuikens.jpg|Nes mit jongen
 Ofbeelding:20050507-007-fulica-atra.jpg
 Ofbeelding:Fulica atra-01 (xndr).jpg
+Fulica atra MHNT.ZOO.2010.11.67.11.jpg |Museum specimen
 </gallery>
 
 == [[Nedersaksisch]] ==
