--- a/De_Rongde_Venen.mw
+++ b/De_Rongde_Venen.mw
@@ -10,9 +10,9 @@ heufplaose = [[Mijdrecht]] |
 oppervlak = 116,98 |
 oppervlak laand = 100,77 |
 oppervlak waoter = 16,21 |
-inwoeners = 42.654 |
-daotum inwoeners = 1 mei 2014 |
-dichtheid = 423 |
+inwoeners = 44.064 |
+daotum inwoeners = 1 jannewaori 2019 |
+dichtheid = 437 |
 breedtegraod = 52/12/42/N |
 lengtegraod = 4/53/29/E |
 verkeersaoder = [[A2]], [[N201]] |
@@ -20,7 +20,7 @@ netnummer = 0294 (Abcoude en Waverveen)<br />0297 (de aore darpen) |
 postcode = 1390-1391 (Abcoude)<br />1396 (Baambrugge)<br />1426 (De Hoef)<br />1427 (Amstelhoek)<br />3640-3643 (Mijdrecht)<br />3645 (Vinkeveen)<br />3646 (Waverveen)<br />3648 (Wilnis) |
 webstee = [http://www.derondevenen.nl www.derondevenen.nl] |
 }}
-'''De Rongde Venen''' ([[Nederlaands|Nederlangds]]: ''De Ronde Venen'') is n [[gemiente (bestuur)|gemeente]] in t noordwesten van de [[Nederlaand|Nederlangd]]se provinsie Utrecht en het n oppervlakte van 84,84 km² (waorvan 27,30 km² waoter). [[Mijdrecht]] is de hoofdplaots van de gemeente.
+'''De Rongde Venen''' ([[Nederlaands|Nederlangds]]: ''De Ronde Venen'') is n [[gemiente (bestuur)|gemeente]] in t noordwesten van de [[Nederlaand|Nederlangd]]se provinsie Utrecht en het n oppervlakte van 116,98 km² (waorvan 16,21 km² waoter). [[Mijdrecht]] is de hoofdplaots van de gemeente.
 
 == Gesjiedenis ==
 t Gebied De Rongde Venen is ontstaon deur t turf aofsteken en inpoldering. Rongdom t gebied leagen de rivieren de [[Kromme Mijdrecht (rivier)|Kromme Mijdrecht]], de [[Amstel (rivier)|Amstel]], de [[Waver (rivier)|Waver]], de [[Winkel (rivier)|Winkel]], de [[Angstel]] en de [[Aa (Utrecht)|Aa]]. Disse waoteren vormen n bienao esleuten, rongde vorm, waorbinnen t gebied in-epolderd (verkaveld) wier. 
