--- a/Lembekke.mw
+++ b/Lembekke.mw
@@ -1,3 +1,4 @@
+[[File:DEU Lembeck COA.svg|right|100px]]
 [[Ofbeelding:Schloss Lembeck-Haupthaus2.jpg|thumb|right|200px|SLot Lembekke]]
 '''Lembekke'''([[Hoogduuts]]: ''Lembeck'') is n doarp in de gemeente [[Recklinghausen]], [[Noordrein-Westfaaln]] in [[Duutslaand]]. In 2011 har t 5246 inwonners. 
 
