*Empty MediaWiki Message*

--- a/Kenia.mw
+++ b/Kenia.mw
@@ -4,7 +4,7 @@ Rund 500 [[Christus|v. Kr.]] tröäken nilotiske herders vanuut et hüdige [[Sü
 
 Kenya is ne presidentiäle representative demokratiske republik, wårin verköäsen verteagenwoordigers de belangen van de inwoaners behartigt en de president ståtshöyvd en regeyringsleider is. Et land is anslöäten by de [[Vereynigde Natys]], [[Wearldbanke]], [[Internationaal Monetäär Funds]]. [[COMESA]] en andere internationale organisatys. Med een döärsneyde inkoamen van 1460<ref>[https://data.worldbank.org/indicator/ny.gnp.pcap.cd?year_high_desc=true data.worldbank.org. GNI per capita, Atlas method (current US$).] Bekeaken up 29 januåry 2019.</ref> hevt Kenya ne middellaege inkoamensekonomy. Nå [[Ethiopie]] is Kenya de gröätste ekonomy van oust- en middel-Afrika,<ref>[http://www.imf.org/external/pubs/ft/weo/2011/01/weodata/weorept.aspx?sy=2008&ey=2011&scsm=1&ssd=1&sort=country&ds=.&br=1&c=664&s=NGDPD%2CNGDPDPC%2CPPPGDP%2CPPPPC%2CLP&grp=0&a=&pr.x=69&pr.y=14 imf.org. Kenya GDP purchasing power 2010: 66 Billion]. 14 September 2006.</ref> med Nairobi as regionaal kommercieel centrum. Landbouw is de gröätste sektor, tea en koffy brengt et meyste geld up. Blomenuutvoor wördt ouk vöärtan belangryker. De deenstenindustry is ne andere groute ekonomiske inkoamstenbrunne, med name tourisme. Kenya is lidmåt van et Oust-Afrikaanse Handelsblok. Gröätste afsetmarkt vöär Kenya is vöäral Afrika selv, med de Europeeske Unie as gode tweyde.<ref>[http://www.brookings.edu/~/media/research/files/papers/2016/05/16-kenya-country-case-study/kenya-country-case.pdf Mwangi S. Kumenyi, Francis M Mwega en Njuguna s. Ndung'u. The African Lions: Kenya country case study. Mei 2016. The Brookings Institution.] Bekeaken up 23 mei 2016.</ref>
 
-[[Kategorie: Tweants artikel]
+[[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
 
 [[en:Kenya]]
