--- a/Homoseksualiteit.mw
+++ b/Homoseksualiteit.mw
@@ -69,15 +69,15 @@ In bepaolde dielen van de wereld worden ok vandaege de dag nog homoseksuelen ver
 
 Behalve in Iran staot op homoseksualiteit de doodstraf in [[Jemen]], [[Mauritanië]], [[Saoedi-Arabië]], [[Soedan]] en de [[Verienigde Arabiese Emiraoten]]. Levenslange gevangenisstraffen kunnen gegeven worden in [[Bangladesh]], [[Bhutan]], [[Guyana]], [[India]], de [[Maldiven]], [[Nepal]], [[Singapoer]] en [[Oeganda]]. In Oeganda wordde an t aende van 2009 n wetsveurstel in behaandeling neumen om de straffen anzienlik te verskarpen. De doodstraf zol meugelik worden veur meensken die homoseksuele seks hebben wielst ze hiv-positief binnen.
 
-[[Bestaand:World_laws_pertaining_to_homosexual_relationships_and_expression.svg|thumb|center|700px|Juridiese posisie van homoseksuelen wereldwied. {{kaortlegenda|#00FF00|Ondudelik}}{{Kolommen
+[[Bestaand:World_laws_pertaining_to_homosexual_relationships_and_expression.svg|thumb|center|700px|Juridiese posisie van homoseksuelen wereldwied. {{Kolommen
 |align=left
 |kolom1=
 '''Toestaon'''
-{{kaortlegenda|#002255|Homohuwelik erkend}}
-{{kaortlegenda|#0066FF|Aandere vorm van partnerskop erkend}}
-{{kaortlegenda|#00FFDE|In t butenlaand sleuten homohuwelik erkend}}
-{{kaortlegenda|#99ccff|Erkend op federaol nivo, gien laandelike erkenning}}
-{{kaortlegenda|#CCCCCC|Gien erkenning}}
+{{kaortlegenda|#025|Homohuwelik erkend}}
+{{kaortlegenda|#06F|Aandere vorm van partnerskop erkend}}
+{{kaortlegenda|#90c|In t butenlaand sleuten homohuwelik erkend}}
+{{kaortlegenda|#9cf|Erkend op federaol nivo, gien laandelike erkenning}}
+{{kaortlegenda|#CCC|Gien erkenning}}
 |kolom2=
 '''Verbeuden'''
 {{kaortlegenda|#decd87|Wettelike beparking m.b.t. mieningsutering}}
