/* Nedersaksisch */Twentsk der by

--- a/Schatliester_(Turdus_pilaris).mw
+++ b/Schatliester_(Turdus_pilaris).mw
@@ -7,6 +7,7 @@ In de winter is de schatliester in [[Nederlaand]] en [[België]] an te treffen. 
 
 == Nedersaksisch ==
 * [[Drèents]]: ''schatliester''
+* [[Tweants]]: ''sjakker''
 
 == Galleri'je ==
 <gallery>
